support user login and register coursels

--- a/courses/templates/courses/base.html
+++ b/courses/templates/courses/base.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <html>
     <head>
-        <title>Another Courses Registration System/title>
+        <title>Another Courses Registration System</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
@@ -10,10 +10,18 @@
     </head>
     <body>
     <a href="{% url 'courses.views.course_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-
     <div class="page-header">
         <h1><a href="/">Another Courses Registration System</a></h1>
     </div>
+    <ul>
+        {% if user.is_authenticated %}
+        <li>PK: {{ user.pk}}</li>
+        <li>User: {{ user.get_username }}</li>
+        <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+        {% else %}
+        <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+        {% endif %}
+    </ul>
     <div class="content">
         <div class="row">
             <div class="col-md-8">
