--- a/courses/templates/courses/user_new.html
+++ b/courses/templates/courses/user_new.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="page-header">
-            <a href="{% url 'course_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            <a href="{% url 'user_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             <h1><a href="/">Another Courses Registration System</a></h1>
         </div>
         <div class="content">
