--- a/courses/templates/courses/base.html
+++ b/courses/templates/courses/base.html
@@ -9,14 +9,13 @@
         <link rel="stylesheet" href="{% static 'css/course.css' %}">
     </head>
     <body>
-    <a href="{% url 'courses.views.course_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
     <div class="page-header">
         <h1><a href="/">Another Courses Registration System</a></h1>
     </div>
     <ul>
         {% if user.is_authenticated %}
-        <li>PK: {{ user.pk}}</li>
         <li>User: {{ user.get_username }}</li>
+        <li><a href="{% url 'courses.views.course_new' %}"><span>add new course</span></a></li>
         <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
         {% else %}
         <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
