--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -4,16 +4,31 @@
     <div class="date">
         <a class="btn btn-default" href="{% url 'course_edit' pk=course.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
     </div>
-    {% if isExist %}
-    <span><a href="{% url 'course_deregister' pk=course.pk upk=user.pk %}">deregister</a></span>
-    {% else %}
-    <span><a href="{% url 'course_register' pk=course.pk upk=user.pk %}">register</a></span>
-    {% endif %}
-    <h1>{{ course.name }}</h1>
-    <h2>{{ course.teacher }}</h2>
-    <p>{{ course.desc }}</p>
-    <h2>{{ course.get_weekday_display }}</h2>
-    <h2>{{ course.get_start_display }}</h2>
-    <h2>{{ course.get_end_display }}</h2>
-    <h2>{{ course.capacity }}</h2>
+
+    <table class="table-striped table-bordered">
+        <tbody>
+        <tr><td>Course Name</td><td>{{ course.number }}::{{ course.name }}</td></tr>
+        <tr><td>Instructor</td><td>{{ course.instructor }}</td></tr>
+        <tr><td style="vertical-align: top;">Description</td><td>{{ course.desc }}</td></tr>
+        <tr><td>Date/Time</td><td>{{course.get_weekday_display}}{{ course.get_start_display }} to {{course.get_end_display}}</td></tr>
+        <tr><td>Capacity</td><td>{{ course.capacity }}</td></tr>
+        <tr><td>Unit</td><td>{{ course.unit }}</td></tr>
+        <tr><td>Room</td><td>{{ course.room }}</td></tr>
+        <tr><td>Status</td><td>
+        {% if isExist %}
+        Registered
+        {% else %}
+        Not Registered
+        {% endif %}</td></tr>
+        <tr><td>Action</td>
+            <td>
+                {% if isExist %}
+                <span><a href="{% url 'course_deregister' pk=course.pk upk=user.pk %}">drop this course</a></span>
+                {% else %}
+                <span><a href="{% url 'course_register' pk=course.pk upk=user.pk %}">register this course</a></span>
+                {% endif %}
+            </td>
+        </tr>
+        </tbody>
+    </table>
 {% endblock %}
