support my schedule

--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="date">
-        <a class="btn btn-default" href="{% url 'course_edit' pk=course.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        <a cddlass="btn btn-default" href="{% url 'course_edit' pk=course.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
     </div>
 
     <table class="table-striped table-bordered">
