--- a/courses/templates/courses/course_list.html
+++ b/courses/templates/courses/course_list.html
@@ -1,7 +1,7 @@
 {% extends 'courses/base.html' %}
 {% block content %}
 <div class="table-responsive">
-        <table  class="table-striped table-bordered">
+        <table  class="table table-striped table-bordered">
             <thead><td>Number</td><td>Name</td><td>Instructor</td><td>Date/Time</td><td>Unit</td></thead>
             <tbody>
                 {% for course in courses %}
