--- a/courses/templates/courses/base.html
+++ b/courses/templates/courses/base.html
@@ -2,28 +2,40 @@
 <html>
     <head>
         <title>Another Courses Registration System</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-        <link href='http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+-        <link href='http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/course.css' %}">
     </head>
     <body>
-    <div class="page-header">
-        <h1><a href="/">Another Courses Registration System</a></h1>
-    </div>
-    <ul>
-        {% if user.is_authenticated %}
-        <li>User: {{ user.get_username }}</li>
-        <li><a href="/">Courses List</a></li>
-        <li><a href="{% url 'courses.views.course_new' %}"><span>Add New Course</span></a></li>
-        <li><a href="{% url 'courses.views.user_detail' pk=user.pk %}"><span>My Schedule</span></a></li>
-        <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
-        {% else %}
-        <li><a href="/">Courses List</a></li>
-        <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
-        {% endif %}
-    </ul>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Course Registration</a>
+                </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                {% if user.is_authenticated %}
+                <li>User: {{ user.get_username }}</li>
+                <li class="active"><a href="/"><span class="glyphicon glyphicon-list-alt"> Courses List</span></a></li>
+                <li><a href="{% url 'courses.views.course_new' %}"><span class="glyphicon glyphicon-plus"> Add New Course</span></a></li>
+                <li><a href="{% url 'courses.views.user_detail' pk=user.pk %}"><span class="glyphicon glyphicon-calendar"> My Schedule</span></a></li>
+                <li><a href="{% url 'logout'%}?next={{request.path}}"><span class="glyphicon glyphicon-log-out"> Logout</span></a></li>
+                {% else %}
+                <li class="active"><a href="/"><span class="glyphicon glyphicon-list-alt"> Courses List</span></a></li>
+                <li><a href="{% url 'login'%}?next={{request.path}}"><span class="glyphicon glyphicon-log-in"> Login</span></a></li>
+                {% endif %}
+            </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="content">
         <div class="row">
             <div class="col-md-8">
