--- a/courses/templates/courses/user_detail.html
+++ b/courses/templates/courses/user_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div class="table-responsive">
-            <table  class="table-striped table-bordered">
+            <table  class="table table-striped table-bordered">
                 <thead><td>Name</td><td>Instructor</td><td>Date/Time</td><td>Unit</td><td>Status</td><td>Action</td></thead>
                 <tbody>
 
