support event calendar

--- a/courses/templates/courses/course_edit.html
+++ b/courses/templates/courses/course_edit.html
@@ -2,8 +2,10 @@
 
 {% block content %}
     <h1>New Course</h1>
+    <div class="form-group">
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
+    </div>
 {% endblock %}
