--- a/courses/templates/courses/user_detail.html
+++ b/courses/templates/courses/user_detail.html
@@ -2,6 +2,109 @@
 
 {% block content %}
 
+<div class="cd-schedule loading">
+	<div class="timeline">
+		<ul>
+            <li><span>09:00</span></li>
+			<li><span>09:30</span></li>
+			<li><span>10:00</span></li>
+			<li><span>10:30</span></li>
+			<li><span>11:00</span></li>
+			<li><span>11:30</span></li>
+			<li><span>12:00</span></li>
+			<li><span>12:30</span></li>
+			<li><span>13:00</span></li>
+			<li><span>13:30</span></li>
+			<li><span>14:00</span></li>
+			<li><span>14:30</span></li>
+			<li><span>15:00</span></li>
+			<li><span>15:30</span></li>
+			<li><span>16:00</span></li>
+			<li><span>16:30</span></li>
+			<li><span>17:00</span></li>
+			<li><span>17:30</span></li>
+			<li><span>18:00</span></li>
+		</ul>
+	</div> <!-- .timeline -->
+
+	<div class="events">
+		<ul>
+			<li class="events-group">
+				<div class="top-info"><span>Monday</span></div>
+				<ul>
+                {% for enroll in enrolls %}
+                    {% if enroll.courseId.weekday == 2 %}
+                    <li class="single-event" data-start="{{enroll.courseId.start}}:00" data-end="{{enroll.courseId.end}}:00" data-content="{{enroll.courseId.number}}" data-event="event-1">
+							<em class="event-name">{{enroll.courseId.number}}::{{enroll.courseId.name}}</em>
+					</li>
+                    {% endif %}
+                {% endfor %}
+				</ul>
+            </li>
+
+			<li class="events-group">
+				<div class="top-info"><span>Tuesday</span></div>
+
+                <ul>
+                {% for enroll in enrolls %}
+                    {% if enroll.courseId.weekday == 3 %}
+                    <li class="single-event" data-start="{{enroll.courseId.start}}:00" data-end="{{enroll.courseId.end}}:00" data-content="{{enroll.courseId.number}}" data-event="event-1">
+                            <em class="event-name">{{enroll.courseId.number}}::{{enroll.courseId.name}}</em>
+                    </li>
+                    {% endif %}
+                {% endfor %}
+                </ul>
+
+			</li>
+
+			<li class="events-group">
+				<div class="top-info"><span>Wednesday</span></div>
+
+                <ul>
+                {% for enroll in enrolls %}
+                    {% if enroll.courseId.weekday == 4 %}
+                    <li class="single-event" data-start="{{enroll.courseId.start}}:00" data-end="{{enroll.courseId.end}}:00" data-content="{{enroll.courseId.number}}" data-event="event-1">
+                            <em class="event-name">{{enroll.courseId.number}}::{{enroll.courseId.name}}</em>
+                    </li>
+                    {% endif %}
+                {% endfor %}
+                </ul>
+
+			</li>
+
+			<li class="events-group">
+				<div class="top-info"><span>Thursday</span></div>
+
+                <ul>
+                {% for enroll in enrolls %}
+                    {% if enroll.courseId.weekday == 5 %}
+                    <li class="single-event" data-start="{{enroll.courseId.start}}:00" data-end="{{enroll.courseId.end}}:00" data-content="{{enroll.courseId.number}}" data-event="event-1">
+                            <em class="event-name">{{enroll.courseId.number}}::{{enroll.courseId.name}}</em>
+                    </li>
+                    {% endif %}
+                {% endfor %}
+                </ul>
+
+			</li>
+
+			<li class="events-group">
+				<div class="top-info"><span>Friday</span></div>
+
+                <ul>
+                {% for enroll in enrolls %}
+                    {% if enroll.courseId.weekday == 6 %}
+                    <li class="single-event" data-start="{{enroll.courseId.start}}:00" data-end="{{enroll.courseId.end}}:00" data-content="{{enroll.courseId.number}}" data-event="event-1">
+                            <em class="event-name">{{enroll.courseId.number}}::{{enroll.courseId.name}}</em>
+                    </li>
+                    {% endif %}
+                {% endfor %}
+                </ul>
+			</li>
+		</ul>
+	</div>
+
+</div> <!-- .cd-schedule -->
+<div></div>
     <div class="table-responsive">
             <table  class="table table-striped table-bordered">
                 <thead><td>Name</td><td>Instructor</td><td>Date/Time</td><td>Unit</td><td>Status</td><td>Action</td></thead>
