--- a/courses/templates/courses/base.html
+++ b/courses/templates/courses/base.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Another Courses Registration System</title>
+        <meta name="google-site-verification" content="heYQQP2X0bjqjWiL4Olw3CcxLqyeFCBT4VCdMzEMY5o" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
