--- a/courses/templates/courses/base.html
+++ b/courses/templates/courses/base.html
@@ -9,12 +9,12 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'css/reset.css' %}"> <!-- CSS reset -->
-        <link rel="stylesheet" href="{% static 'css/style.css' %}"> <!-- Resource style -->
-        <link rel="stylesheet" href="{% static 'css/course.css' %}">
-        <script src="{% static 'js/modernizr.js' %}"></script>
+        <link rel="stylesheet" href="https://storage.cloud.google.com/course.sten.website/static/css/reset.css"> <!-- CSS reset -->
+        <link rel="stylesheet" href="https://storage.cloud.google.com/course.sten.website/static/css/style.css"> <!-- Resource style -->
+        <link rel="stylesheet" href="https://storage.cloud.google.com/course.sten.website/static/css/course.css">
+        <script src="https://storage.cloud.google.com/course.sten.website/static/js/modernizr.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-        <script src="{% static 'js/main.js' %}"></script>
+        <script src="https://storage.cloud.google.com/course.sten.website/static/js/main.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-inverse">
