--- a/courses/templates/registration/login.html
+++ b/courses/templates/registration/login.html
@@ -23,8 +23,8 @@
   <td>{{ form.username }}</td>
 </div>
 <div>
-  <td>{{ form.password.label_tag }}</td>
-  <td>{{ form.password }}</td>
+  <td>{{ form.password.label_tag }} (kevin)</td>
+  <td>{{ form.password }}(test)</td>
 </div>
 
 <div>
