--- a/courses/templates/registration/login.html
+++ b/courses/templates/registration/login.html
@@ -23,10 +23,10 @@
   <td>{{ form.username }}</td>
 </div>
 <div>
-  <td>{{ form.password.label_tag }} (kevin)</td>
-  <td>{{ form.password }}(test)</td>
+  <td>{{ form.password.label_tag }}</td>
+  <td>{{ form.password }}</td>
 </div>
-
+(test account: Username:allen, Password:test)
 <div>
   <input type="submit" value="login" />
   <input type="hidden" name="next" value="{{ next }}" />
